objects/ssot__Party__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BorrowerRating__c</fullName>
        <label>Borrower Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreditRating__c</fullName>
        <label>Credit Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreditScoreNumber__c</fullName>
        <label>Credit ScoreNumber</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HouseholdId__c</fullName>
        <label>Household</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LifetimeAssetValueAmount__c</fullName>
        <label>Lifetime Asset Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NoMergeReason__c</fullName>
        <label>No Merge Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrganizationId__c</fullName>
        <label>Organization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyType__c</fullName>
        <label>Party Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Party_IndividualId_map_Individual_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party_IndividualId_map_Individual_Id_N_1</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Party_IndividualId_map_Individual_Id_N_1</relationshipLabel>
        <relationshipName>Party_IndividualId_map_Individual_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>